--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <!-- Arena and Position Tracker -->
         <div id="arena" class="relative h-28 bg-gray-900 border-4 border-gray-700 rounded-lg mb-6 flex items-center justify-center">
             <div id="p1-char" class="character-icon text-neon-red" style="left: 10%;">👊</div>
-            <div id="p2-char" class="character-icon text-neon-green" style="left: 80%; transform: scaleX(-1);">🦵</div>
+            <div id="p2-char" class="character-icon text-neon-green" style="left: 80%; transform: scaleX(-1);">👊🏼</div>
             <div id="distance-indicator" class="text-xl text-yellow-400 absolute top-0 mt-2">Distance: 7</div>
         </div>
 
